WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292737
[visionOS] Spatial HLS playback not staying in spatial mode while seeking
https://bugs.webkit.org/show_bug.cgi?id=292737
Summary
[visionOS] Spatial HLS playback not staying in spatial mode while seeking
Jer Noble
Reported
2025-05-08 13:08:08 PDT
[visionOS] Spatial HLS playback not staying in spatial mode while seeking
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2025-05-08 13:08:09 PDT
<
rdar://problem/146978728
>
Jer Noble
Comment 2
2025-05-08 13:12:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45124
EWS
Comment 3
2025-05-08 16:48:00 PDT
Committed
294687@main
(9a0cbe308d31): <
https://commits.webkit.org/294687@main
> Reviewed commits have been landed. Closing PR #45124 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug