[visionOS] Spatial HLS playback not staying in spatial mode while seeking rdar://146978728 https://bugs.webkit.org/show_bug.cgi?id=292737

Reviewed by Eric Carlson.

During a seek operation, an AVURLAsset backed by a HLS stream will tear down all
its AVPlayerItemTracks/AVAssetTracks and re-create those tracks once the seek
completes. During this tear-down, the old AVAssetTracks will sometimes "lose"
their CMFormatDescriptions as reported by AVAssetTrack.formatDescriptions. When
this happens, WebKit will report that the AVAssetTrack is no longer spatial.
(In addition, the track will no longer have a codec, nor a width or height.)

To work around this behavior, inside both AudioTrackPrivateAVFObjC and
VideoTrackPrivateAVFObjC, change the behavior of resetPropertiesFromTrack() to
skip updating the VideoTrackPrivate's configuration in the case where the old
configuration had a codec, but the new configuration does not. This prevents
the behavior where the track's internal objects are torn down from affecting
the clients of VideoTrackPrivateAVFObjC.

* Source/WebCore/platform/graphics/avfoundation/objc/AudioTrackPrivateAVFObjC.mm:
(WebCore::AudioTrackPrivateAVFObjC::resetPropertiesFromTrack):
* Source/WebCore/platform/graphics/avfoundation/objc/VideoTrackPrivateAVFObjC.cpp:
(WebCore::VideoTrackPrivateAVFObjC::resetPropertiesFromTrack):

Canonical link: https://commits.webkit.org/294687@main