Source/WebCore/platform/graphics/avfoundation/objc/AudioTrackPrivateAVFObjC.mm
@@ -71,7 +71,18 @@ void AudioTrackPrivateAVFObjC::resetPropertiesFromTrack()
     setId(m_impl->id());
     setLabel(m_impl->label());
     setLanguage(m_impl->language());
-    setConfiguration(m_impl->audioTrackConfiguration());
+
+    // Occasionally, when tearing down an AVAssetTrack in a HLS stream, the track
+    // will go from having a formatDescription (and therefore having valid values
+    // for properties that are derived from the format description, like codec() or
+    // sampleRate()) to not having a format description. AVAssetTrack is ostensibly an
+    // invariant, and properties like formatDescription should never move from
+    // non-null to null. When this happens, ignore the configuration change.
+    auto newConfiguration = m_impl->audioTrackConfiguration();
+    if (!configuration().codec.isEmpty() && newConfiguration.codec.isEmpty())
+        return;
+
+    setConfiguration(WTFMove(newConfiguration));
 }
 
 void AudioTrackPrivateAVFObjC::audioTrackConfigurationChanged()
